# mitosisanalyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  environment.yml  mitoanalysis.py  mitosisanalyzer.def  pyproject.toml  write_version_info.py
.github/workflows/: publish-pypi.yml
notebooks/: mitoanalyzer-cellpose.ipynb  oscillations.ipynb
scripts/: entrypoint.sh
src/: calc.py  fileutils.py  mitoanalysis.py  segmentation.py  vis.py
src/mitosisanalyzer/: analysis.py  calc.py  fileutils.py  image.py  utils.py  vis.py
