[project]
name = "mitosisanalyzer"
version = "0.0.1"
dependencies = [
    "pandas",
    "seaborn",
    "matplotlib",
    "argparse",
    "ffmpeg",
    "scipy",
    "scikit-image",
    "nd2reader",
    "tifffile",
    "tiffile",
    "typing",
    "opencv-python-headless",
    "cellpose",
    "prefect",
    "prefect-dask",
]
requires-python = ">=3.9"
description = "Tool to track spindle pole movements in fluorescently labeled mitotic cells."
readme = "README.md"
authors = [{ name = "Karsten Siller" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Image Processing :: Segmentation :: Workflows",
]

[project.optional-dependencies]
napari = ["mitosisanalyzer-napari"]

[project.scripts]
mitoanalyzer = "mitosisanalyzer.analysis:main"

[project.gui-scripts]
mitoanalyzer = "mitosisanalyzer.analysis:main"

[project.urls]
Homepage = "https://github.com/uvarc/mitosisanalyzer"
Issues = "https://github.com/uvarc/mitosisanalyzer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
