[project]
name = "mitosisanalyzer"
dynamic = ["version"]
dependencies = [
    "pandas",
    "seaborn",
    "matplotlib",
    "argparse",
    "ffmpeg",
    "scipy",
    "scikit-image",
    "nd2reader",
    "tifffile",
    "tiffile",
    "typing",
    "opencv-python-headless",
    "cellpose",
    "prefect",
    "prefect-dask",
]
requires-python = ">=3.9"
description = "Tool to track spindle pole movements in fluorescently labeled mitotic cells."
readme = "README.md"
authors = [{ name = "Karsten Siller" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
napari = ["mitosisanalyzer-napari"]

[project.scripts]
mitoanalyzer = "mitosisanalyzer.analysis:main"

[project.gui-scripts]
mitoanalyzer = "mitosisanalyzer.analysis:main"

[project.urls]
Homepage = "https://github.com/uvarc/mitosisanalyzer"
Issues = "https://github.com/uvarc/mitosisanalyzer/issues"

[build-system]
requires = [
    "hatchling", 
    "versioningit",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["[0-9]*.[0-9]*.[0-9]*", "[0-9]*.[0-9]*.[0-9]*.dev[0-9]*"]
default-tag = "0.0.0"

[tool.versioningit.next-version]
method = "smallest-release"

[tool.versioningit.write]
method = { module = "write_version_info", value = "write_version_info"}
path = "src/mitosisanalyzer/_version.py"

[tool.versioningit.format]
distance = "{base_version}.post{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{base_version}.post{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.hatch.build]
# Replace the path below with the path to the file created by the
# `write` step:
artifacts = ["src/mitoanalyzer/_version.py"]

[tool.hatch.build.targets.sdist]
include = ["/src/mitosisanalyzer", "/README.md", "/LICENSE", "/pyproject.toml"]